--- a/ui-progress-bar.css
+++ b/ui-progress-bar.css
@@ -28,7 +28,7 @@ THE SOFTWARE.
   }
 
   from {
-    background-position: 44px 0;
+    background-position: 30px 0;
   }
 }
 
@@ -38,7 +38,17 @@ THE SOFTWARE.
   }
 
   from {
-    background-position: 36px 0;
+    background-position: 30px 0;
+  }
+}
+
+@keyframes animate-stripes {
+  to {
+    background-position: 0 0;
+  }
+
+  from {
+    background-position: 30px 0;
   }
 }
 
@@ -53,16 +63,6 @@ THE SOFTWARE.
   margin-bottom:10px;
   /* For browser that don't support gradients, we'll set a blanket background colour */
   background-color: #abb2bc;
-  /* Rounds the ends, we specify an excessive amount to make sure they are completely rounded */
-  /* Adjust to your liking, and don't forget to adjust to the same amount in .ui-progress */
-  /*
-  -moz-border-radius: 25px;
-  -webkit-border-radius: 25px;
-  -o-border-radius: 25px;
-  -ms-border-radius: 25px;
-  -khtml-border-radius: 25px;
-  border-radius: 25px;
-  */
   /* Background gradient */
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #949daa), color-stop(100%, #abb2bc));
   background: -webkit-linear-gradient(#949daa 0%, #abb2bc 100%);
@@ -95,10 +95,10 @@ THE SOFTWARE.
   border: 1px solid #458845;
 }
 .ui-progress-bar.transition .ui-progress {
-  -moz-transition: background-color 0.5s ease-in, border-color 1.5s ease-out, box-shadow 1.5s ease-out;
-  -webkit-transition: background-color 0.5s ease-in, border-color 1.5s ease-out, box-shadow 1.5s ease-out;
-  -o-transition: background-color 0.5s ease-in, border-color 1.5s ease-out, box-shadow 1.5s ease-out;
-  transition: background-color 0.5s ease-in, border-color 1.5s ease-out, box-shadow 1.5s ease-out;
+  -moz-transition: background-color 0.5s linear, border-color 1.5s linear, box-shadow 1.5s linear;
+  -webkit-transition: background-color 0.5s linear, border-color 1.5s linear, box-shadow 1.5s linear;
+  -o-transition: background-color 0.5s linear, border-color 1.5s linear, box-shadow 1.5s linear;
+  transition: background-color 0.5s linear, border-color 1.5s linear, box-shadow 1.5s linear;
 }
 .ui-progress-bar .ui-progress {
   /* Usual setup stuff */
@@ -107,27 +107,11 @@ THE SOFTWARE.
   overflow: hidden;
   /* Height should be 2px less than .ui-progress-bar so as to not cover borders and give it a look of being inset */
   height: 23px;
-  /* Rounds the ends, we specify an excessive amount to make sure they are completely rounded */
-  /* Adjust to your liking, and don't forget to adjust to the same amount in .ui-progress-bar */
-  /*
-  -moz-border-radius: 25px;
-  -webkit-border-radius: 25px;
-  -o-border-radius: 25px;
-  -ms-border-radius: 25px;
-  -khtml-border-radius: 25px;
-  border-radius: 25px;
-  */
-  /* Set the background size so the stripes work correctly */
-  -webkit-background-size: 44px 44px;
-  -moz-background-size: 36px 36px;
-  /* Webkit */
   /* For browser that don't support gradients, we'll set a base background colour */
   background-color: #339BB9;
-  /* Webkit background stripes and gradient */
-  background: -webkit-gradient(linear, 0 0, 44 44, color-stop(0, rgba(255, 255, 255, 0.17)), color-stop(0.25, rgba(255, 255, 255, 0.17)), color-stop(0.26, rgba(255, 255, 255, 0)), color-stop(0.5, rgba(255, 255, 255, 0)), color-stop(0.51, rgba(255, 255, 255, 0.17)), color-stop(0.75, rgba(255, 255, 255, 0.17)), color-stop(0.76, rgba(255, 255, 255, 0)), color-stop(1, rgba(255, 255, 255, 0))), -webkit-gradient(linear, left bottom, left top, color-stop(0, rgba(255, 255, 255, 0)), color-stop(1, rgba(255, 255, 255, 0.35))), #339BB9;
-  /* Mozilla (Firefox etc) background stripes */
-  /* Note: Mozilla's support for gradients is more true to the original design, allowing gradients at 30 degrees, as apposed to 45 degress in webkit. */
-  background: -moz-repeating-linear-gradient(top left -30deg, rgba(255, 255, 255, 0.17), rgba(255, 255, 255, 0.17) 15px, rgba(255, 255, 255, 0) 15px, rgba(255, 255, 255, 0) 30px), -moz-linear-gradient(rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%), #339BB9;
+  background-size: 30px 30px;
+  background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   -moz-box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4), inset 0px -1px 1px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4), inset 0px -1px 1px rgba(0, 0, 0, 0.2);
   -o-box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4), inset 0px -1px 1px rgba(0, 0, 0, 0.2);
