--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 #container {
+  min-width: 800px;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
@@ -14,7 +15,7 @@
 #stage {
   padding-left: 10px;
   padding-right: 10px;
-  background: #ffe373; /*rgba(224,224,224,1.0);*/
+  background: #ffe373;
   margin-left: 10px;
   margin-right: 10px;
   height: 400px;
